--- a/rover_driver/package.xml
+++ b/rover_driver/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="lingkang@todo.todo">lingkang</maintainer>
+  <maintainer email="lingkangzhang@gmail.com">zlingkang</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
