--- a/rover_2dnav/package.xml
+++ b/rover_2dnav/package.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>rover_robot</name>
+  <name>rover_2dnav</name>
   <version>0.0.0</version>
-  <description>The rover_robot package</description>
+  <description>The rover_2dnav package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="lingkangzhang@gmail.com">lingkang</maintainer>
+  <maintainer email="lingkang@todo.todo">lingkang</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>BSD</license>
+  <license>TODO</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/rover_robot</url> -->
+  <!-- <url type="website">http://wiki.ros.org/rover_2dnav</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -49,13 +49,14 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <exec_depend>rover_driver</exec_depend>
-  <exec_depend>rover_tool</exec_depend>
-  <exec_depend>rover_2dnav</exec_depend>
-  <exec_depend>ydlidar</exec_depend>
+  <build_depend>move_base</build_depend>
+  <build_export_depend>move_base</build_export_depend>
+  <exec_depend>move_base</exec_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <metapackage/>
+    <!-- Other tools can request additional information be placed here -->
+
   </export>
 </package>
