--- a/rover_2dnav/launch/costmap_common_params.yaml
+++ b/rover_2dnav/launch/costmap_common_params.yaml
@@ -1,6 +1,6 @@
 obstacle_range: 10.0
 raytrace_range: 3.0
-footprint: [[-0.1, -0.1], [-0.1, 0.1], [0.1, 0.1] [0.1, -0.1]]
+footprint: [[-0.1, -0.1], [-0.1, 0.1], [0.1, 0.1], [0.1, -0.1]]
 #robot_radius: ir_of_robot
 inflation_radius: 0.30
 
