--- a/rover_2dnav/launch/costmap_common_params.yaml
+++ b/rover_2dnav/launch/costmap_common_params.yaml
@@ -3,6 +3,7 @@ raytrace_range: 3.0
 footprint: [[-0.1, -0.1], [-0.1, 0.1], [0.1, 0.1], [0.1, -0.1]]
 #robot_radius: ir_of_robot
 inflation_radius: 0.30
+transform_tolerance: 1.5
 
 observation_sources: laser_scan_sensor #point_cloud_sensor
 
