--- a/rover_2dnav/launch/base_local_planner_params.yaml
+++ b/rover_2dnav/launch/base_local_planner_params.yaml
@@ -1,11 +1,19 @@
 TrajectoryPlannerROS:
   max_vel_x: 0.45
-  min_vel_x: 0.1
+  min_vel_x: -0.45
   max_vel_theta: 1.0
+  min_vel_theta: -1.0
   min_in_place_vel_theta: 0.4
 
   acc_lim_theta: 3.2
   acc_lim_x: 2.5
-  acc_lim_y: 2.5
+
+  xy_goal_tolerance: 0.25
+  yaw_goal_tolerance: 0.25
 
   holonomic_robot: false
+
+  max_vel_y: 0.0
+  min_vel_y: 0.0
+  acc_lim_y: 0.0
+  vy_samples: 0
