--- a/rover_2dnav/launch/local_costmap_params.yaml
+++ b/rover_2dnav/launch/local_costmap_params.yaml
@@ -1,10 +1,11 @@
 local_costmap:
-  global_frame: odom
-  robot_base_frame: base_link
-  update_frequency: 5.0
-  publish_frequency: 2.0
+  global_frame: /odom
+  robot_base_frame: /base_link
+  update_frequency: 2.0
+  publish_frequency: 0.5
   static_map: false
   rolling_window: true
   width: 3.0
   height: 3.0
   resolution: 0.05
+  transform_tolerance: 3.0
